Changed some of my functions to be more readable and less complex.